[package]
name = "amethyst"
version = "0.15.3"
authors = [
    "Eyal Kalderon <ebkalderon@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Data-oriented game engine written in Rust"
exclude = ["examples/*", "book/*"]
keywords = ["game", "engine", "sdk", "amethyst"]
categories = ["game-engines"]

documentation = "https://docs.amethyst.rs/stable/amethyst"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

readme = "README.md"
license = "MIT/Apache-2.0"

# FIXME: remove after all existing examples working
autoexamples = false

[patch.crates-io]
legion-transaction = { git = "https://github.com/jlowry/prefab", branch = "serde-diff-0.4" }
legion-prefab = { git = "https://github.com/jlowry/prefab", branch = "serde-diff-0.4" }
prefab-format = { git = "https://github.com/jlowry/prefab", branch = "serde-diff-0.4" }
serde-diff = { git = "https://github.com/amethyst/serde-diff", branch = "v0.4.0" }

[features]
default = ["parallel", "renderer", "utils"]
optional = ["audio", "network", "locale", "ui"]

vulkan = ["amethyst_rendy/vulkan"]
metal = ["amethyst_rendy/metal"]
empty = ["amethyst_rendy/empty"]

tiles = ["amethyst_tiles"]
#animation = ["amethyst_animation"]
audio = ["amethyst_audio"]
#gltf = ["amethyst_gltf", "amethyst_animation"]
locale = ["amethyst_locale"]
network = ["amethyst_network"]
utils = ["amethyst_utils"]

renderer = ["amethyst_rendy"]

ui = ["amethyst_ui"] #, "amethyst_animation/ui"]

profiler = [
    "thread_profiler",
    "thread_profiler/thread_profiler",
    #"amethyst_animation/profiler",
    "amethyst_assets/profiler",
    "amethyst_audio/profiler",
    "amethyst_config/profiler",
    "amethyst_core/profiler",
    #"amethyst_controls/profiler",
    "amethyst_input/profiler",
    "amethyst_locale/profiler",
    "amethyst_rendy/profiler",
    #"amethyst_ui/profiler",
    "amethyst_utils/profiler",
    "amethyst_tiles/profiler",
]
sdl_controller = ["amethyst_input/sdl_controller"]
json = ["amethyst_assets/json"]
server = ["locale", "network"]
no-slow-safety-checks = ["amethyst_rendy/no-slow-safety-checks"]
shader-compiler = ["amethyst_rendy/shader-compiler"]
test-support = ["amethyst_rendy/test-support", "amethyst_window/test-support"]
experimental-spirv-reflection = ["amethyst_rendy/experimental-spirv-reflection"]
parallel = ["amethyst_core/parallel"]

[workspace]
members = ["amethyst_*"]
exclude = ["amethyst_gltf", "amethyst_animation", "amethyst_test"]

[dependencies]
#amethyst_animation = { path = "amethyst_animation", version = "0.15.3", optional = true }
amethyst_assets = { path = "amethyst_assets", version = "0.15.3" }
amethyst_audio = { path = "amethyst_audio", version = "0.15.3", optional = true }
amethyst_config = { path = "amethyst_config", version = "0.15.3" }
amethyst_core = { path = "amethyst_core", version = "0.15.3" }
amethyst_error = { path = "amethyst_error", version = "0.15.3" }
amethyst_controls = { path = "amethyst_controls", version = "0.15.3" }
amethyst_derive = { path = "amethyst_derive", version = "0.15.3" }
#amethyst_gltf = { path = "amethyst_gltf", version = "0.15.3", optional = true }
amethyst_network = { path = "amethyst_network", version = "0.15.3", optional = true }
amethyst_locale = { path = "amethyst_locale", version = "0.15.3", optional = true }
amethyst_rendy = { path = "amethyst_rendy", version = "0.15.3", features = ["window"], optional = true }
amethyst_input = { path = "amethyst_input", version = "0.15.3" }
amethyst_ui = { path = "amethyst_ui", version = "0.15.3", optional = true }
amethyst_utils = { path = "amethyst_utils", version = "0.15.3", optional = true }
amethyst_window = { path = "amethyst_window", version = "0.15.3" }
amethyst_tiles = { path = "amethyst_tiles", version = "0.15.3", optional = true }
winit = { git = "https://git@github.com/rust-windowing/winit", rev = "38fccebe1fbc4226c75d6180e5317bd93c024951", features = ["serde"] }
crossbeam-channel = "0.4.2"
derivative = "2.1.1"
fern = { version = "0.6.0", features = ["colored"] }
log = { version = "0.4.8", features = ["serde"] }
rayon = "1.4.0"
rustc_version_runtime = "0.2.0"
sentry = { version = "0.18.0", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
palette = { version = "0.4", features = ["serde"] }
thread_profiler = { version = "0.3.0", optional = true }
lazy_static = "1.4.0"
glsl-layout = "0.3.2"
# until https://github.com/amethyst/legion/pull/186 passed
legion = { version = "0.3", default-features = false, features = [
    "serialize",
    "crossbeam-events",
    "codegen",
] }

[dev-dependencies]
rusty-hook = { git = "https://git@github.com/swellaby/rusty-hook", branch = "master" }
derive-new = "0.5.8"
env_logger = "0.7.1"
genmesh = "0.6.2"
ron = "0.5.1"
type-uuid = "0.1"
serde-diff = "0.4"
legion-prefab = "0.1"
prefab-format = "0.1"

[build-dependencies]
dirs = "2.0.2"
vergen = "3.1.0"

[[example]]
name = "hello_world"

[[example]]
name = "window"

[[example]]
name = "sphere"

# [[example]]
# name = "renderable"

# [[example]]
# name = "renderable_custom"

[[example]]
name = "optional_graphics"

# [[example]]
# name = "asset_custom"

[[example]]
name = "asset_loading"

[[example]]
name = "material"

# [[example]]
# name = "gltf"
# required-features = ["animation", "gltf"]

# [[example]]
# name = "ui"
# required-features = ["audio"]

[[example]]
name = "ui_from_code"
required-features = ["ui", "audio"]

# [[example]]
# name = "states_ui"
# required-features = ["audio"]

[[example]]
name = "custom_render_pass"

# [[example]]
# name = "custom_ui"
# required-features = ["audio"]

# [[example]]
# name = "animation"
# required-features = ["animation"]

[[example]]
name = "fly_camera"

# [[example]]
# name = "sprite_animation"
# required-features = ["animation"]

[[example]]
name = "sprites_ordered"

[[example]]
name = "pong_tutorial_01"

[[example]]
name = "pong_tutorial_02"

[[example]]
name = "pong_tutorial_03"

[[example]]
name = "pong_tutorial_04"

[[example]]
name = "pong_tutorial_05"
required-features = ["ui"]

# [[example]]
# name = "pong_tutorial_06"
# required-features = ["audio"]

[[example]]
name = "net_client"
required-features = ["network"]

[[example]]
name = "net_server"
required-features = ["network"]

[[example]]
name = "locale"
required-features = ["locale"]

# [[example]]
# name = "custom_game_data"

[[example]]
name = "arc_ball_camera"

[[example]]
name = "prefab_atelier"

[[example]]
name = "prefab"

# [[example]]
# name = "prefab_adapter"

# [[example]]
# name = "prefab_basic"

# [[example]]
# name = "prefab_multi"

# [[example]]
# name = "prefab_custom"

# [[example]]
# name = "debug_lines"

# [[example]]
# name = "debug_lines_ortho"

# [[example]]
# name = "state_dispatcher"

# [[example]]
# name = "spotlights"

[[example]]
name = "sprite_camera_follow"

# [[example]]
# name = "auto_fov"

[[example]]
name = "events"

[[example]]
name = "events_custom_state_event"

# [[example]]
# name = "state_dispatcher"

# [[example]]
# name = "mouse_raycast"

# [[example]]
# name = "rendy"
# required-features = ["animation", "gltf"]

[[example]]
name = "tiles"
required-features = ["tiles"]

[package.metadata.docs.rs]
features = [
    "animation",
    "audio",
    "gltf",
    "tiles",
    "json",
    "locale",
    "network",
    "ui",
    "sdl_controller",
    "vulkan",
]
