[package]
name = "amethyst"
version = "0.15.3"
authors = [
    "Eyal Kalderon <ebkalderon@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Data-oriented game engine written in Rust"
exclude = ["examples/*", "book/*"]
keywords = ["game", "engine", "sdk", "amethyst"]
categories = ["game-engines"]

documentation = "https://docs.amethyst.rs/stable/amethyst"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

readme = "README.md"
license = "MIT/Apache-2.0"

autoexamples = false # Our examples come with their own Cargo.toml and are in the [workspace] section

[features]
default = ["parallel", "renderer", "utils", "no-slow-safety-checks"]
optional = ["audio", "network", "locale", "ui", "tiles", "animation"]

tiles = ["amethyst_tiles"]
animation = ["amethyst_animation"]
audio = ["amethyst_audio"]
#gltf = ["amethyst_gltf", "amethyst_animation"]
locale = ["amethyst_locale"]
network = ["amethyst_network"]
utils = ["amethyst_utils"]
renderer = ["amethyst_rendy"]
ui = ["amethyst_ui", "amethyst_animation/ui"]

empty = ["amethyst_rendy/empty"]
vulkan = ["amethyst_rendy/vulkan"]
metal = ["amethyst_rendy/metal"]

profiler = [
    "thread_profiler",
    "thread_profiler/thread_profiler",
    "amethyst_animation/profiler",
    "amethyst_assets/profiler",
    "amethyst_audio/profiler",
    "amethyst_config/profiler",
    "amethyst_core/profiler",
    "amethyst_controls/profiler",
    "amethyst_input/profiler",
    "amethyst_locale/profiler",
    "amethyst_rendy/profiler",
    "amethyst_ui/profiler",
    "amethyst_utils/profiler",
    "amethyst_tiles/profiler",
]
# sdl_controller = ["amethyst_input/sdl_controller"]
json = ["amethyst_assets/json"]
server = ["locale", "network"]
no-slow-safety-checks = ["amethyst_rendy/no-slow-safety-checks"]
shader-compiler = ["amethyst_rendy/shader-compiler"]
test-support = ["amethyst_rendy/test-support", "amethyst_window/test-support"]
experimental-spirv-reflection = ["amethyst_rendy/experimental-spirv-reflection"]
parallel = ["amethyst_core/parallel"]

[workspace]
members = ["examples/*", "amethyst_*"]
exclude = [
    "amethyst_gltf",
    "amethyst_test",
    "examples/Cargo.toml",
    "examples/_unused_assets",
    "examples/spotlights",
    "examples/renderable",
    "examples/renderable_custom",
    "examples/rendy",
    "examples/states_ui",
    "examples/state_dispatcher",
    "examples/pong_tutorial_06",
    "examples/prefab_basic",
    "examples/prefab_multi",
    "examples/prefab_custom",
    "examples/prefab_adapter",
    "examples/ui",
    "examples/custom_ui",
    "examples/auto_fov",
    "examples/custom_game_data",
    "examples/gltf",
]

[dependencies]
amethyst_animation = { path = "amethyst_animation", version = "0.15.3", optional = true }
amethyst_assets = { path = "amethyst_assets", version = "0.15.3" }
amethyst_audio = { path = "amethyst_audio", version = "0.15.3", optional = true }
amethyst_config = { path = "amethyst_config", version = "0.15.3" }
amethyst_core = { path = "amethyst_core", version = "0.15.3" }
amethyst_error = { path = "amethyst_error", version = "0.15.3" }
amethyst_controls = { path = "amethyst_controls", version = "0.15.3" }
amethyst_derive = { path = "amethyst_derive", version = "0.15.3" }
#amethyst_gltf = { path = "amethyst_gltf", version = "0.15.3", optional = true }
amethyst_network = { path = "amethyst_network", version = "0.15.3", optional = true }
amethyst_locale = { path = "amethyst_locale", version = "0.15.3", optional = true }
amethyst_rendy = { path = "amethyst_rendy", version = "0.15.3", features = ["window"], optional = true }
amethyst_input = { path = "amethyst_input", version = "0.15.3" }
amethyst_ui = { path = "amethyst_ui", version = "0.15.3", optional = true }
amethyst_utils = { path = "amethyst_utils", version = "0.15.3", optional = true }
amethyst_window = { path = "amethyst_window", version = "0.15.3" }
amethyst_tiles = { path = "amethyst_tiles", version = "0.15.3", optional = true }
winit = { git = "https://github.com/rust-windowing/winit", rev = "38fccebe1fbc4226c75d6180e5317bd93c024951", features = ["serde"] }
crossbeam-channel = "0.4.2"
derivative = "2.1.1"
fern = { version = "0.6.0", features = ["colored"] }
log = { version = "0.4.8", features = ["serde"] }
rayon = "1.4.0"
rustc_version_runtime = "0.2.0"
sentry = { version = "0.18.0", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
palette = { version = "0.4", features = ["serde"] }
thread_profiler = { version = "0.3.0", optional = true }
lazy_static = "1.4.0"
glsl-layout = "0.3.2"
# until https://github.com/amethyst/legion/pull/186 passed
legion = { version = "0.3", default-features = false, features = [
    "serialize",
    "crossbeam-events",
    "codegen",
] }

[build-dependencies]
dirs = "2.0.2"
vergen = "3.1.0"

[package.metadata.docs.rs]
features = [
    "animation",
    "audio",
    "gltf",
    "tiles",
    "json",
    "locale",
    "network",
    "ui",
    "sdl_controller",
    "vulkan",
]
