[package]
name = "amethyst_animation"
version = "0.15.3"
authors = [
    "Simon Rönnberg <seamonr@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Animation support for Amethyst"
keywords = ["game", "engine", "animation", "3d", "amethyst"]

documentation = "https://docs.amethyst.rs/stable/amethyst_animation/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_rendy = { path = "../amethyst_rendy", version = "0.15.3" }
amethyst_ui = { path = "../amethyst_ui", version = "0.15.3", optional = true }
derivative = "2.1.1"
fnv = "1"
log = "0.4"
minterpolate = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thread_profiler = { version = "0.3", optional = true }
alga = "0.9.3"
type-uuid = "0.1.2"
uuid = "0.8.1"
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "7c30249f106e6177549e223ca2823eec8ab6c70b" }

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }

[features]
profiler = ["thread_profiler/thread_profiler"]
ui = ["amethyst_ui"]
