[package]
name = "amethyst_assets"
version = "0.16.0"
authors = [
    "torkleyy <torkleyy@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
readme = "README.md"
edition = "2018"
description = """
Asynchronous asset management for games.
"""
exclude = ["examples/*"]
license = "MIT/Apache-2.0"
keywords = ["game", "asset", "resource", "management", "amethyst"]
categories = ["filesystem"]

documentation = "https://docs.amethyst.rs/stable/amethyst_assets/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.16.0" }
amethyst_error = { path = "../amethyst_error", version = "0.16.0" }
crossbeam-queue = "0.3"
derivative = "2.2.0"
crossbeam-channel = "0.5"
derive-new = "0.5"
fnv = "1"
log = "0.4"
parking_lot = "0.11"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
ron = "0.6.4"
thread_profiler = { version = "0.3", optional = true }
err-derive = "0.3"
dyn-clone = "1.0"
erased-serde = "0.3.16"
inventory = "0.1.10"
lazy_static = "1.4"
distill = { version = "0.0.3", features = [
    "serde-1",
    "type_uuid",
    "serde_importers",
    "parallel_hash",
    "rpc_io",
    "handle",
] }
uuid = { version = "0.8", features = ["v4"] }
bincode = "1.3"
type-uuid = "0.1"
futures-executor = { version = "0.3", default-features = false }
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "8565883493aaf6044e210ffe2e72eec519d46369" }
prefab-format = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "8565883493aaf6044e210ffe2e72eec519d46369" }
encoding_rs_io = "0.1"
serde-diff = "0.4"
structopt = { version = "0.3", default-features = false, optional = true }
# TODO remove this dependency by wrapping it in distill
tokio = { version = "1.7", features = ["sync"], optional = true }

[dev-dependencies]
amethyst = { path = "../", version = "0.16.0", features = ["renderer"] }
serde_json = "1"
fern = { version = "0.6", features = ["colored"] }
serde-diff = "0.4"
serial_test = "0.5.1"

[features]
default = ["asset-daemon"]
profiler = ["thread_profiler/thread_profiler"]
json = ["serde_json"]
asset-daemon = ["structopt", "tokio"]
