[package]
name = "amethyst_audio"
version = "0.10.1"
authors = ["Xaeroxe <kieseljake@gmail.com>", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"
description = "Audio support for Amethyst"
exclude = ["examples/*"]
keywords = ["game", "engine", "audio","amethyst"]
categories = ["audio"]

documentation = "https://docs.amethyst.rs/stable/amethyst_audio/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

readme = "README.md"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.11.0" }
amethyst_core = { path = "../amethyst_core", version = "0.10.0", default-features = false }
amethyst_error = { path = "../amethyst_error", version = "0.5.0" }
cpal = { git = "https://github.com/amethyst/cpal", branch = "wasm" }
derive-new = "0.5"
log = "0.4.6"
rodio = { git = "https://github.com/amethyst/rodio", branch = "wasm", default-features = false }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.2", features = ["serde"] }
thread_profiler = { version = "0.3", optional = true }

[dev-dependencies]
amethyst_utils = { path = "../amethyst_utils", version = "0.10.0" }

[features]
default = ["flac", "vorbis", "wav", "mp3"]
flac = ["rodio/flac"]
vorbis = ["rodio/vorbis"]
wav = ["rodio/wav"]
mp3 = ["rodio/mp3"]
wasm = ["cpal/wasm-bindgen"]
profiler = [ "thread_profiler/thread_profiler" ]
