[package]
name = "amethyst_audio"
version = "0.15.3"
authors = [
    "Xaeroxe <kieseljake@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Audio support for Amethyst"
exclude = ["examples/*"]
keywords = ["game", "engine", "audio", "amethyst"]
categories = ["multimedia::audio"]

documentation = "https://docs.amethyst.rs/stable/amethyst_audio/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
cpal = "0.11"
derive-new = "0.5"
log = "0.4"
rodio = "0.11"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.2", features = ["serde"] }
thread_profiler = { version = "0.3", optional = true }
type-uuid = "0.1"

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }
amethyst_utils = { path = "../amethyst_utils", version = "0.15.3" }

[features]
profiler = ["thread_profiler/thread_profiler"]
