[package]
name = "amethyst_config"
version = "0.15.3"
authors = [
    "Aceeri <conmcclusk@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Loading from .ron files into Rust structures with defaults to prevent hard errors."
exclude = ["examples/*"]

documentation = "https://docs.amethyst.rs/stable/amethyst_config/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[dependencies]
ron = "0.6.4"
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3.1", optional = true }
serde = "1"
encoding_rs_io = "0.1"

thread_profiler = { version = "0.3", optional = true }

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }

[features]
profiler = ["thread_profiler/thread_profiler"]
json = ["serde_json"]
binary = ["bincode"]
