[package]
name = "amethyst_controls"
version = "0.16.0"
authors = [
    "Joël Lupien <jojolepro@jojolepro.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Amethyst controls"

documentation = "https://docs.amethyst.rs/stable/amethyst_controls/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT OR Apache-2.0"

[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.16.0" }
#amethyst_derive = { path = "../amethyst_derive", version = "0.16.0" }
amethyst_error = { path = "../amethyst_error", version = "0.16.0" }
amethyst_input = { path = "../amethyst_input", version = "0.16.0" }
derive-new = "0.5"
serde = { version = "1", features = ["derive"] }
winit = { version = "0.25", features = ["serde"] }
log = "0.4"
thread_profiler = { version = "0.3", optional = true }

[dev-dependencies]
amethyst = { path = "../", version = "0.16.0", features = ["renderer"] }


[features]
profiler = ["thread_profiler/thread_profiler"]
