[package]
name = "amethyst_core"
version = "0.15.3"
authors = [
    "Simon Rönnberg <seamonr@gmail.com>",
    "Joël Lupien <jojolepro@jojolepro.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Amethyst core"

documentation = "https://docs.amethyst.rs/stable/amethyst_core/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[dependencies]
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
type-uuid = "0.1"
log = "0.4.8"
num-traits = "0.2.11"
serde = { version = "1", features = ["derive"] }
approx = "0.4"
derive-new = "0.5.8"
getset = "0.1.1"
legion = { version = "0.3.1", default-features = false, features = [
    "serialize",
    "crossbeam-events",
    "codegen",
] }
nalgebra = { version = "0.23.1", features = ["serde-serialize"] }
rayon = "1.5"
shrev = "1.1.1"
shrinkwraprs = "0.3"
simba = "0.3"
smallvec = "1.4"
thread_profiler = { version = "0.3", optional = true }
serde-diff = "0.4"

[dev-dependencies]
ron = "0.6.4"

[features]
profiler = ["thread_profiler/thread_profiler"]
parallel = ["legion/parallel"]
