[package]
name = "amethyst_core"
version = "0.15.3"
authors = [
    "Simon Rönnberg <seamonr@gmail.com>",
    "Joël Lupien <jojolepro@jojolepro.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Amethyst core"

documentation = "https://docs.amethyst.rs/stable/amethyst_core/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[dependencies]
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
game_clock = "1.1.1"
fern = { version = "0.6", features = ["colored"] }
type-uuid = "0.1"
log = "0.4"
num-traits = "0.2.11"
serde = { version = "1", features = ["derive"] }
approx = "0.4"
derive-new = "0.5"
getset = "0.1.1"
legion = { version = "0.3.1", default-features = false, features = [
    "serialize",
    "crossbeam-events",
    "codegen",
] }
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "7c30249f106e6177549e223ca2823eec8ab6c70b" }
nalgebra = { version = "0.24", default-features = false, features = ["serde-serialize"] }
rayon = "1.5"
shrev = "1.1.1"
simba = { version = "0.3" }
smallvec = "1.4"
spin_sleep = "1.0.0"
thread_profiler = { version = "0.3", optional = true }
serde-diff = "0.4"

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }
ron = "0.6.4"

[features]
profiler = ["thread_profiler/thread_profiler"]
parallel = ["legion/parallel"]
